[#124][Refactor] 좋아요 총 개수 서브 쿼리문 추가